--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
   qr_flutter: ^4.2.0
-  screenshot: ^1.2.3
+  # Using Flutter's built-in RepaintBoundary for screenshots
   path_provider: ^2.1.1
   flutter_svg: ^2.0.7
   firebase_core: ^2.18.0
